<resources>
    <string name="app_name">FMC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //customize font
    <string name="app_font">fonts/OpenSans-Regular.ttf</string>
    <string name="app_font_light">fonts/OpenSans-Light.ttf</string>
    <string name="app_font_bold">fonts/OpenSans-Bold.ttf</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="hello_there_n_nwelcome_back">Hello there!</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_the_mobile_number_associated_with_your_account">Enter the mobile number associated with your account!</string>
    <string name="send">Send</string>
    <string name="registers">Register</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="have_an_account">Have an account?</string>
    <string name="my_Family">My Family</string>
    <string name="benefits">My Benefits</string>
    <string name="medical_provider">Medical Provider</string>
    <string name="pre_approval">Pre-Approvals</string>
    <string name="reimbursement">Reimbursement</string>
    <string name="ecard">E-card</string>
    <string name="compliants">Complaints</string>
    <string name="faq">FAQs</string>
    <string name="about_us">About us</string>
    <string name="language">Language</string>
    <string name="health_tips">Health tips</string>
    <string name="logout">Logout</string>
    <string name="welcomes">Welcome,</string>
    <string name="card_number">Card Number</string>
    <string-array name="nav_drawer_labels">
        <item>@string/my_Family</item>
        <item>@string/benefits</item>
        <item>@string/medical_provider</item>
        <item>@string/pre_approval</item>
        <item>@string/reimbursement</item>
        <item>@string/ecard</item>
        <item>@string/compliants</item>
        <item>@string/faq</item>
        <item>@string/about_us</item>
        <item>@string/language</item>
        <item>@string/health_tips</item>
        <item>@string/contact_us</item>
        <item>@string/logout</item>
    </string-array>

    <string name="are_you_sure_wanna_logout">Are you sure want to a Logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="medicine_limit">Medicine Limit</string>
    <string name="total_limit">Total Limit</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="effective_date">Effective Date</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="emirates">Emirates</string>
    <string name="select_emirates">Select Emirates</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="get_direction">Get Direction</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="medical_facility_country">Medical Facility Country</string>
    <string name="select_medical_facility_country">Select Medical Facility Country</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select Currency</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="i_ban_number">IBAN No- (23 digits)</string>
    <string name="enter_your_i_ban_number">Enter your IBAN Number</string>
    <string name="beneficiary_name">Account Holder\'s Name</string>
    <string name="enter_your_beneficiary_name">Enter your Service Period</string>
    <string name="upload_documents">Upload Required Documents</string>
    <string name="browse">Browse</string>
    <string name="or">Or</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="compliant_type">Complaint Type</string>
    <string name="select_compliant_type">Select Complaint Type</string>
    <string name="subject">Subject</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="compliant">Complaints</string>
    <string name="enter_you_compliant">Enter you Complaint</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="reference_number">Reference Number</string>
    <string name="view">View</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="providername">Provider Name</string>
    <string name="data_of_visit">Date Of Visit</string>
    <string name="choose_your_language">Choose your Language</string>

    <string name="choose_your_of_file">Choose your of File</string>
    <string name="no_file_found">No file Found</string>
    <string name="invalid_image_format">Invalid image format</string>
    <string name="doductable_type">Deductible type</string>
    <string name="flat">Flat</string>
    <string name="remarks">Remarks</string>
    <string name="complaintno">ComplaintNo</string>
    <string name="reach_us">Reach Us</string>
    <string name="email_us">Email Us</string>
    <string name="provider">Provider</string>
    <string name="service_type">Service Type</string>
    <string name="servicename">ServiceName</string>
    <string name="cardnumber">CardNumber</string>
    <string name="claim_id">Claim ID</string>
    <string name="batch_number">Batch Number</string>
    <string name="member_name">Member Name</string>
    <string name="select_your_gender">Select your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="state">State/Emirates</string>
    <string name="select_state">Select State</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="provide_type">Provide Type</string>
    <string name="select_provide_type">Select Provide Type</string>
    <string name="speciality">Speciality</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="service_period">Service Period</string>
    <string name="_1_attachment_should_not_exceed_more_than_5mb">1. Attachment should not exceed more than 5mb.</string>
    <string name="_2_file_should_be_in_jpg_png_or_pdf_format">2. File should be in .jpg,.png or .pdf format</string>
    <string name="_3_maximum_5_attachments_only">3. Maximum 9 attachments only.</string>
    <string name="front_picture">Front Picture</string>
    <string name="back_picture">Back Picture</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="no_data">No Data</string>
    <string name="select_family_member">Select Family Member</string>
    <string name="select_your_category">Select your Category</string>
    <string name="select_reimbursement_type">Select Reimbursement Type</string>
    <string name="select_your_state">Select your State</string>
    <string name="select_your_country">Select your country</string>
    <string name="select_provider_type">Select Provider Type</string>
    <string name="select_your_provider_type">Select your Select your Provider Type</string>
    <string name="family_member">Family Member</string>
    <string name="choose">Choose</string>
    <string name="your_language">Your Language</string>
    <string name="gallery">Gallery</string>
    <string name="pdf">Pdf</string>
    <string name="select_your_browse_type">Select your Browse Type?</string>
    <string name="browse_type">Browse Type</string>
    <string name="op_deuctible">OP Deductibles</string>
    <string name="ip_decutbles">IP Deductibles</string>
    <string name="morethan">You has\'t add more than 9 documents</string>
    <string name="documentsize">Your documents size must be below 5mbs</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_provider_name">Enter provider name</string>
    <string name="select_your_visit_date">Select your visit date</string>
    <string name="enter_complaint_type">Enter Complaint Type</string>
    <string name="select_complaint_type">Select Complaint Type</string>
    <string name="search_here">Search here</string>
    <string name="account_type">Account type</string>
    <string name="select_account_type">Select Account type</string>
    <string name="swift_code">Swift Code No</string>
    <string name="enter_swift_code_no">Enter Swift Code No</string>
    <string name="_4_salary_pre_pay_a_c_will_not_be_accepted_kindly_contact_reimbursement_fmchealthcare_ae_for_more_details">Kindly contact reimbursement@fmchealthcare.ae for more details.</string>
    <string name="prcessed_time">Processed Time</string>
    <string name="request_time">Request Time</string>
    <string name="savings">Savings</string>
    <string name="current">Current</string>
    <string name="i_have_read_and_agree_with_the_terms_and_condtions">I have read and agree with the <u>terms and conditions</u></string>
    <string name="profile">Profile</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="choose_id_type">Choose ID type</string>
    <string name="e_id">E ID</string>
    <string name="member_card">Member Card</string>
    <string name="enter_account_holder_s_name">Enter account holder\'s name</string>
    <string name="salary_pre_pay_a_c">Salary pre-pay A/c will not be accepted.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="only_number">only 15 number</string>
    <string name="maximum_characters">Maximum 50 characters</string>
    <string name="password_mis">Password mismatch , please check your password</string>
</resources>
