<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="datas"
                type="com.kotlintest.app.model.responseModel.UserInfoModel" />

    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:background="@color/White"
            android:focusable="true"
            android:layout_height="match_parent"
            tools:context=".view.fragment.ProfileFragment">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    app:navigationIcon="@drawable/ic_back"
                    android:elevation="@dimen/_5sdp"
                    android:id="@+id/toolbar"
                    app:title="@string/profile"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextViewCustomFont_bold"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@{datas.name}"
                        android:padding="@dimen/_2sdp"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextViewCustomFont_bold"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@{datas.email}"
                        android:padding="@dimen/_2sdp"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextViewCustomFont_bold"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@{datas.dob}"
                        android:padding="@dimen/_2sdp"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextViewCustomFont_bold"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/card_number"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@{datas.cardNumber}"
                        android:padding="@dimen/_2sdp"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextViewCustomFont_bold"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/gender"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@{datas.gender}"
                        android:padding="@dimen/_2sdp"
                        android:textColor="@color/Black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_height="@dimen/_150sdp">
            <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_curve"
                    android:scaleType="centerCrop"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:src="@drawable/ic_logos"
                    android:padding="@dimen/_25sdp"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    android:layout_alignParentBottom="true"
                    android:layout_height="@dimen/_80sdp"/>


        </RelativeLayout>

    </FrameLayout>
</layout>